# privacy-OTC

./: .gitignore  Anchor.toml  README.md  index.html  package-lock.json  package.json  tsconfig.node.tsbuildinfo  tsconfig.tsbuildinfo  vite.config.js  vite.config.ts
migrations/: deploy.ts
programs/veil_otc/: Cargo.toml
programs/veil_otc/src/: lib.rs
src/: App.tsx  main.tsx  polyfills.ts  styles.css  types.ts  vite-env.d.ts
src/components/: WalletRuntimePanel.tsx
src/data/: mockData.ts
src/idl/: veil_otc.json  veil_otc.ts
src/lib/: magicblock.ts  veilOtcProgram.ts
src/providers/: AppProviders.tsx  MagicBlockRuntimeProvider.tsx
