[package]
name = "veil_otc"
version = "0.1.0"
description = "Private OTC marketplace core program for VeilOTC"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "veil_otc"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build"]

[dependencies]
anchor-lang = { version = "0.31.1", features = ["init-if-needed"] }
ephemeral-rollups-sdk = { version = "0.10.1", features = ["access-control"] }
